Fix form alignment issues

--- a/scss/marrel.scss
+++ b/scss/marrel.scss
@@ -38,7 +38,7 @@ h4,
 h5,
 h6,
 p {
-  margin: 0 0 .5em 0;
+  margin: 0 0 1em 0;
 }
 
 h1 {
@@ -135,14 +135,14 @@ textarea {
 input,
 select,
 textarea {
-  padding: 2px 5px !important;
+  padding: 3px 5px !important;
   margin: 0 0 1em 0;
   border: 1px solid $color-greyscale1;
   border-radius: 2px;
 }
 
 input {
-  padding: 7+2px 5px !important;
+  padding: 8+3px 5px !important;
 }
 
 input:disabled,
@@ -151,13 +151,20 @@ option:disabled {
 }
 
 input[type="radio"],
-input[type="checkbox"] {
-  margin: .25em 0 .25em 0;
+input[type="checkbox"],
+select {
+  margin-top: 20px;
 }
 
 label {
-  padding: 10px 0;
+  padding: 9.5px 0;
   font-weight: bold;
+
+  & input[type="radio"],
+  & input[type="checkbox"] {
+    margin: -9.5px 0;
+  }
+
 }
 
 .form-full {
@@ -232,7 +239,7 @@ form .success {
 
 /* === BUTTONS === */
 .btn {
-  padding: 6.5px 16px !important;
+  padding: 8.5px 16px !important;
   display: inline-block;
   text-decoration: none;
   line-height: inherit !important;
